Update Activity Eleven, Twelve and Thirteen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.InteractiveModuleProject"
         tools:targetApi="31">
         <activity
+            android:name=".ThirteenActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TwelveActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ElevenActivity"
+            android:exported="false" />
+        <activity
             android:name=".TenActivity"
             android:exported="false" />
         <activity
