add activity twentyone (kunci jawaban)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,13 @@
         android:theme="@style/Theme.InteractiveModuleProject"
         tools:targetApi="31">
         <activity
+            android:name=".TwentyOneActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ThirteenActivity"
             android:exported="false" />
         <activity
