--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.InteractiveModuleProject"
         tools:targetApi="31">
         <activity
+            android:name=".SixteenActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FifteenActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FourteenActivity"
+            android:exported="false" />
+        <activity
             android:name=".ThirteenActivity"
             android:exported="false" />
         <activity
