--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.InteractiveModuleProject"
         tools:targetApi="31">
         <activity
+            android:name=".EighteenActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SevenTeenActivity"
+            android:exported="false" />
+        <activity
             android:name=".SixteenActivity"
             android:exported="false" />
         <activity
